

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpura_kinbu"
    android:orientation="vertical"
    tools:context="co.kinbu.MainActivity">

    <!-- android:paddingTop="?attr/actionBarSize" <- this allows all inside the layout to be in place when on overlay mode -->

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/kinbu_logo"
        android:contentDescription="@string/logo_content_desc"/>


    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"

        android:text="@string/app_slogan"
        android:textColor="@color/oro" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:onClick="startSignUp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:onClick="startSignIn"
        android:text="@string/sign_in" />

</LinearLayout>
